--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "gunicorn",
     "ipython",
     "onnxruntime",
+    "pre-commit>=4.2.0",
     "pydantic",
     "python-dotenv",
     "pyyaml",
